fixed icon spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,5 +12,6 @@
 }
 
 .button_margin {
-  margin-right: 8px;
+  margin-right: 16px;
+  margin-top: 12px;
 }
